# api-spec.yml
@@ -11,11 +11,13 @@ info:
   license:
     name: Apache License Version 2.0
     url: 'https://www.apache.org/licenses/LICENSE-2.0'
-host: 'localhost:8082'
+host: 'localhost:8084'
 basePath: /
 tags:
   - name: auth-controller
     description: Auth Controller
+  - name: user-controller
+    description: User Controller
 paths:
   /user/login:
     post:
@@ -38,7 +40,7 @@ paths:
         '200':
           description: OK
           schema:
-            type: string
+            $ref: '#/definitions/JwtToken'
         '201':
           description: Created
         '401':
@@ -68,7 +70,9 @@ paths:
         '200':
           description: OK
           schema:
-            type: string
+            type: object
+            additionalProperties:
+              type: string
         '201':
           description: Created
         '401':
@@ -77,10 +81,10 @@ paths:
           description: Forbidden
         '404':
           description: Not Found
-  '/user/update/{id}':
+  '/user/update/{userid}':
     put:
       tags:
-        - auth-controller
+        - user-controller
       summary: updateUser
       operationId: updateUserUsingPUT
       consumes:
@@ -88,19 +92,18 @@ paths:
       produces:
         - '*/*'
       parameters:
+        - name: userid
+          in: path
+          description: userid
+          required: true
+          type: integer
+          format: int64
         - in: body
           name: user
           description: user
           required: true
           schema:
             $ref: '#/definitions/UserWrapper'
-        - in: body
-          name: id
-          description: id
-          required: false
-          schema:
-            type: integer
-            format: int64
       responses:
         '200':
           description: OK
@@ -114,43 +117,118 @@ paths:
           description: Forbidden
         '404':
           description: Not Found
+  /user/upload:
+    post:
+      tags:
+        - user-controller
+      summary: handleFileUpload
+      operationId: handleFileUploadUsingPOST
+      consumes:
+        - multipart/form-data
+      produces:
+        - '*/*'
+      parameters:
+        - name: file
+          in: formData
+          description: file
+          required: true
+          type: file
+        - name: userId
+          in: query
+          description: userId
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: object
+        '201':
+          description: Created
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+  '/user/{userid}':
+    get:
+      tags:
+        - user-controller
+      summary: getUser
+      operationId: getUserUsingGET
+      consumes:
+        - application/json
+      produces:
+        - '*/*'
+      parameters:
+        - name: userid
+          in: path
+          description: userid
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: string
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
 definitions:
+  JwtToken:
+    type: object
+    properties:
+      jti:
+        type: string
+      refresh_token:
+        type: string
+      token:
+        type: string
+      type:
+        type: string
   ActRequest:
     type: object
     properties:
-      activation:
-        $ref: '#/definitions/JSONObject'
+      mode:
+        type: string
       profile_required:
         type: boolean
       user_name:
         type: string
       user_type:
         type: string
-  JSONObject:
-    type: object
-    properties:
-      empty:
-        type: boolean
   VerificationRequest:
     type: object
     properties:
+      code:
+        type: string
+      mode:
+        type: string
       profile_required:
         type: boolean
       user_name:
         type: string
       user_type:
         type: string
-      verification:
-        $ref: '#/definitions/JSONObject'
   UserWrapper:
     type: object
     properties:
+      address:
+        type: string
       created_time:
         type: string
         format: date-time
       email:
         type: string
       first_name:
+        type: string
+      image:
         type: string
       last_name:
         type: string
