# src/main/java/com/pm/auth/beans/ActRequest.java
@@ -1,25 +1,14 @@
 package com.pm.auth.beans;
 
-import org.json.JSONObject;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
 
+@Data
+@NoArgsConstructor
+@EqualsAndHashCode(callSuper = false)
 public class ActRequest extends UserData{
 
 	boolean isProfileRequired = false;
-	private JSONObject activation;
-
-	public boolean isProfileRequired() {
-		return isProfileRequired;
-	}
-
-	public void setProfileRequired(boolean isProfileRequired) {
-		this.isProfileRequired = isProfileRequired;
-	}
-
-	public JSONObject getActivation() {
-		return activation;
-	}
-
-	public void setActivation(JSONObject activation) {
-		this.activation = activation;
-	}
+	private String mode;
 }
