# src/main/java/com/pm/auth/beans/VerificationRequest.java
@@ -1,25 +1,15 @@
 package com.pm.auth.beans;
 
-import org.json.JSONObject;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
 
+@Data
+@NoArgsConstructor
+@EqualsAndHashCode(callSuper = false)
 public class VerificationRequest extends UserData{
 
 	boolean isProfileRequired = false;
-	private JSONObject verification;
-
-	public boolean isProfileRequired() {
-		return isProfileRequired;
-	}
-
-	public void setProfileRequired(boolean isProfileRequired) {
-		this.isProfileRequired = isProfileRequired;
-	}
-
-	public JSONObject getVerification() {
-		return verification;
-	}
-
-	public void setVerification(JSONObject verification) {
-		this.verification = verification;
-	}
+	private String mode;
+	private String code;
 }
