# src/main/java/com/pm/auth/login/AuthController.java
@@ -1,11 +1,12 @@
 package com.pm.auth.login;
 
+import java.util.Map;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -13,6 +14,7 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.pm.auth.beans.ActRequest;
+import com.pm.auth.beans.JwtToken;
 import com.pm.auth.beans.VerificationRequest;
 import com.pm.auth.service.LoginService;
 
@@ -27,23 +29,17 @@ public class AuthController {
 
 	@PostMapping("/register")
 	@ResponseStatus(code = HttpStatus.OK)
-	public ResponseEntity<String> registrationHandler(@RequestBody() ActRequest userRequest) {
+	public ResponseEntity<Map<String, String>> registrationHandler(@RequestBody() ActRequest userRequest) {
 		LOGGER.info("Registration request {}", userRequest);
-		String response = loginService.register(userRequest);
+		Map<String, String> response = loginService.register(userRequest);
 		return ResponseEntity.ok().body(response);
 	}
 	
 	@PostMapping("/login")
 	@ResponseStatus(code = HttpStatus.OK)
-	public ResponseEntity<String> loginHandler(@RequestBody() VerificationRequest userRequest) {
+	public ResponseEntity<JwtToken> loginHandler(@RequestBody() VerificationRequest userRequest) {
 		LOGGER.info("OTP auth request {}", userRequest);
-		String jwt = loginService.login(userRequest);
+		JwtToken jwt = loginService.login(userRequest);
 		return ResponseEntity.ok().body(jwt);
-	}
-	
-	@GetMapping("/login")
-	@ResponseStatus(code = HttpStatus.OK)
-	public ResponseEntity<String> get() {
-		return ResponseEntity.ok().body("Ok ............");
 	}
 }
